# mscr-importer

./: .env.example  .env.test  .gitignore  Makefile  README.md  api_client.py  fair_mappings_schema.py  mscr_importer.py  pyproject.toml  requirements.txt  test_cli.sh  transformer.py  validator.py
test_data/: employee.xsd  local_mapping.sssom  person.xsd  person_transform.xslt  research-field-to-field.yaml  sample_r2rml.ttl  vp26-mscr-demo-sssom.csv
test_samples/: invalid_bad_yaml.yaml  invalid_empty.yaml  invalid_extra_fields.yaml  invalid_missing_type.yaml  valid_file_content.yaml  valid_full.yaml  valid_http_content.yaml  valid_minimal.yaml  valid_other_type.yaml  valid_r2rml.yaml  valid_sparql.yaml  valid_sssom.yaml  valid_xslt.yaml  valid_yaml_content.yaml
